--- a/app/template/scss/_base.scss
+++ b/app/template/scss/_base.scss
@@ -4,9 +4,9 @@ header, section, footer, aside, nav, article {display:block}
 ul{list-style:none}
 $color1:#000;
 $color2:#fff;
+$color3:#307a56;
+$color4:#333;
 
-$color3:#f4f4f4;
-$color4:#1a237e;
 $color5:#666;
 $color6:#ff5722;
 $color7:#80bbde;
@@ -35,10 +35,12 @@ html {
 
 body{
 	@include flexbox;
+	@include font-size(1.4);
+	font-family: "SegoeUIRegular", Arial;
+	color: $color4;
 	flex-flow: column;
 	font-display: swap;
 	height: 100vh;
-	@include font-size(1.4);
 }
 
 html, body{
@@ -58,6 +60,70 @@ input::-moz-focus-inner{
 	border: 0;
 	padding: 0;
 }
+
+
+@font-face {
+    font-family: 'CenturyGothic';
+    src: url('../fonts/CenturyGothic.eot');
+    src: url('../fonts/CenturyGothic.eot') format('embedded-opentype'),
+         url('../fonts/CenturyGothic.woff2') format('woff2'),
+         url('../fonts/CenturyGothic.woff') format('woff'),
+         url('../fonts/CenturyGothic.ttf') format('truetype')
+}
+
+
+@font-face {
+    font-family: 'CenturyGothicBold';
+    src: url('../fonts/CenturyGothicBold.eot');
+    src: url('../fonts/CenturyGothicBold.eot') format('embedded-opentype'),
+         url('../fonts/CenturyGothicBold.woff2') format('woff2'),
+         url('../fonts/CenturyGothicBold.woff') format('woff'),
+         url('../fonts/CenturyGothicBold.ttf') format('truetype')
+}
+
+
+/* font-family: "SegoeUIRegular"; */
+@font-face {
+	font-family: "SegoeUIRegular";
+	src: url("../fonts/SegoeUIRegular/SegoeUIRegular.eot");
+	src: url("../fonts/SegoeUIRegular/SegoeUIRegular.eot?#iefix")format("embedded-opentype"),
+	url("../fonts/SegoeUIRegular/SegoeUIRegular.woff") format("woff"),
+	url("../fonts/SegoeUIRegular/SegoeUIRegular.ttf") format("truetype");
+	font-style: normal;
+	font-weight: normal;
+}
+/* font-family: "SegoeUIBold"; */
+@font-face {
+	font-family: "SegoeUIBold";
+	src: url("../fonts/SegoeUIBold/SegoeUIBold.eot");
+	src: url("../fonts/SegoeUIBold/SegoeUIBold.eot?#iefix")format("embedded-opentype"),
+	url("../fonts/SegoeUIBold/SegoeUIBold.woff") format("woff"),
+	url("../fonts/SegoeUIBold/SegoeUIBold.ttf") format("truetype");
+	font-style: normal;
+	font-weight: normal;
+}
+
+@font-face {
+	font-family: "SegoeUIItalic";
+	src: url("../fonts/SegoeUIItalic/SegoeUIItalic.eot");
+	src: url("../fonts/SegoeUIItalic/SegoeUIItalic.eot?#iefix")format("embedded-opentype"),
+	url("../fonts/SegoeUIItalic/SegoeUIItalic.woff") format("woff"),
+	url("../fonts/SegoeUIItalic/SegoeUIItalic.ttf") format("truetype");
+	font-style: normal;
+	font-weight: normal;
+}
+
+
+.cg{font-family: 'CenturyGothic';}
+.cgb{font-family: 'CenturyGothicBold';}
+
+.bold{
+	font-family: "SegoeUIBold";
+}
+.italic{
+	font-family: "SegoeUIItalic";
+}
+
 
 
 .outerwrapper{
@@ -163,7 +229,6 @@ header{
 				left: -110px;
 			}
 			.owl-next{
-				@include sprite;
 				// .rotation(180deg);
 				right: -110px;
 			}
