--- a/app/template/css/styles.css
+++ b/app/template/css/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .show-sm {
   display: none; }
 
@@ -106,13 +107,15 @@ input::-moz-focus-inner {
 
 @font-face {
   font-family: 'CenturyGothic';
-  src: url("../fonts/CenturyGothic.eot");
-  src: url("../fonts/CenturyGothic.eot") format("embedded-opentype"), url("../fonts/CenturyGothic.woff2") format("woff2"), url("../fonts/CenturyGothic.woff") format("woff"), url("../fonts/CenturyGothic.ttf") format("truetype"); }
+  src: url("../fonts/CenturyGothic.woff2") format("woff2"), url("../fonts/CenturyGothic.woff") format("woff"), url("../fonts/CenturyGothic.ttf") format("truetype"); }
 
 @font-face {
   font-family: 'CenturyGothicBold';
-  src: url("../fonts/CenturyGothicBold.eot");
-  src: url("../fonts/CenturyGothicBold.eot") format("embedded-opentype"), url("../fonts/CenturyGothicBold.woff2") format("woff2"), url("../fonts/CenturyGothicBold.woff") format("woff"), url("../fonts/CenturyGothicBold.ttf") format("truetype"); }
+  src: url("../fonts/CenturyGothicBold.woff2") format("woff2"), url("../fonts/CenturyGothicBold.woff") format("woff"), url("../fonts/CenturyGothicBold.ttf") format("truetype"); }
+
+@font-face {
+  font-family: 'CenturyGothicItalic';
+  src: url("../fonts/CenturyGothicItalic.eot") format("embedded-opentype"), url("../fonts/CenturyGothicItalic.woff2") format("woff2"), url("../fonts/CenturyGothicItalic.woff") format("woff"), url("../fonts/CenturyGothicItalic.ttf") format("truetype"); }
 
 /* font-family: "SegoeUIRegular"; */
 @font-face {
@@ -150,15 +153,19 @@ input::-moz-focus-inner {
 .cgb {
   font-family: 'CenturyGothicBold'; }
 
-.bold, .title, .contacts__tel, .sqicons__item-title {
+.cgi, .contacts__ring, .footer__navcopyright .copyright__right, .kreotif {
+  font-family: 'CenturyGothicItalic'; }
+
+.bold, .title, .contacts__tel, .sqicons__item-title, .feedback__form .submit {
   font-family: "SegoeUIBold"; }
 
-.italic, .contacts__ring, .neck .writeus-link, .more {
+.italic, .neck .writeus-link, .more, .policy, .footer__cities, .rubrics__news, .feedback__form .row .form-control, .feedback__form .row textarea, .feedback__form .submit {
   font-family: "SegoeUIItalic"; }
 
 .outerwrapper {
   -webkit-flex: 1;
-  flex: 1; }
+  flex: 1;
+  padding-bottom: 4rem; }
 
 /*** standart classes *****/
 a {
@@ -182,9 +189,9 @@ input::-moz-focus-inner {
   border: 0;
   padding: 0; }
 
-@font-face {}.tdn, .more a {
+@font-face {}.tdn, .more a, .policy a, .footer__cities a, .kreotif a, .rubrics__news a, .feedback .vcard .email {
   text-decoration: none; }
-  .tdn:hover, .more a:hover {
+  .tdn:hover, .more a:hover, .policy a:hover, .footer__cities a:hover, .kreotif a:hover, .rubrics__news a:hover, .feedback .vcard .email:hover {
     text-decoration: underline; }
 
 .tdu {
@@ -201,10 +208,11 @@ input::-moz-focus-inner {
   border: 1px solid #307a56;
   border-radius: 0;
   margin-top: 0.6rem;
-  font-size: 16px; }
+  font-size: 16px;
+  -webkit-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out; }
   .form-control:focus, .form-control:active {
-    border-color: #8c8c8c;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(222, 72, 111, 0.3); }
+    border-color: #307a56 !important; }
 
 .flexbox {
   display: -webkit-box;
@@ -269,6 +277,12 @@ input::-moz-focus-inner {
     text-transform: uppercase; }
     .contacts__ring:hover {
       border-bottom-color: rgba(255, 255, 255, 0); }
+  .contacts-footer {
+    background-image: -webkit-linear-gradient(top, #317b57 0%, #8bbaa3 100%);
+    background-image: -o-linear-gradient(top, #317b57 0%, #8bbaa3 100%);
+    background-image: linear-gradient(to bottom, #317b57 0%, #8bbaa3 100%);
+    background-repeat: repeat-x;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FF317B57', endColorstr='#FF8BBAA3', GradientType=0); }
 
 .neck .logo {
   margin-left: 4.5rem; }
@@ -316,17 +330,154 @@ input::-moz-focus-inner {
 .text {
   margin: 1.5rem 0; }
 
+.text-center {
+  text-align: center; }
+
 .text-right {
   text-align: right; }
 
-.more a {
-  color: #307a56; }
+.more {
+  margin: 2rem 0;
+  text-align: center; }
+  .more a {
+    color: #307a56; }
+
+.block-center, .feedback__form .submit {
+  display: block;
+  margin-left: auto;
+  margin-right: auto; }
+
+/* =policy
+---------------------------*/
+.policy {
+  color: #292929; }
+  .policy a {
+    color: #307a56; }
+
+/* =/policy
+---------------------------*/
+.user-access + label {
+  cursor: pointer; }
+
+.user-access:not(checked) {
+  position: absolute;
+  opacity: 0; }
+
+.user-access:not(checked) + label {
+  display: block;
+  position: relative;
+  /* будем позиционировать псевдочекбокс относительно label */
+  padding: 0 0 0 40px;
+  /* оставляем слева от label место под псевдочекбокс */ }
+
+/* Оформление первой части чекбокса в выключенном состоянии (фон). */
+.user-access:not(checked) + label:before {
+  content: '';
+  position: absolute;
+  top: -3px;
+  left: 0;
+  width: 30px;
+  height: 30px;
+  border: 1px solid #ccc; }
+
+/* Меняем фон чекбокса, когда он включен. */
+.user-access:checked + label:before {
+  border-color: #ccc; }
+
+/* Сдвигаем переключатель чекбокса, когда он включен. */
+.user-access:checked + label:after {
+  content: '*';
+  position: absolute;
+  top: -3px;
+  left: 7px;
+  width: 22px;
+  height: 22px;
+  font-size: 30px; }
+
+input.submit:disabled {
+  background: rgba(128, 128, 128, 0.3) !important;
+  cursor: default; }
+  input.submit:disabled:hover {
+    opacity: 1 !important; }
+
+.form-control,
+textarea {
+  -webkit-transition: background 0.2s ease-out;
+  transition: background 0.2s ease-out; }
+
+textarea {
+  resize: none; }
 
 /* =footer
 ---------------------------*/
-footer {
-  height: 40px;
-  background: #FFCC00; }
+.footer .container {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem; }
+
+.footer__top {
+  background: #e6e6e6;
+  height: 12rem; }
+
+.footer__navcopyright {
+  padding-top: 2.5rem; }
+  .footer__navcopyright .nav {
+    justify-content: space-between;
+    padding-right: 6rem;
+    width: 655px; }
+    .footer__navcopyright .nav a {
+      color: #333; }
+      .footer__navcopyright .nav a:hover {
+        color: #307a56; }
+  .footer__navcopyright .copyright {
+    line-height: 1.5;
+    padding-top: 2rem; }
+    .footer__navcopyright .copyright__right {
+      font-size: 13px;
+      font-size: 1.3rem;
+      color: #307a56;
+      padding-left: .8rem; }
+      .footer__navcopyright .copyright__right a {
+        color: #307a56; }
+
+.footer__cities {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 775px; }
+  .footer__cities a {
+    color: #307a56; }
+
+.footer__logo {
+  background: #307a56;
+  width: 120px;
+  height: 120px;
+  display: flex; }
+
+.footer__social {
+  display: flex; }
+  .footer__social-icons {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-left: 2.2rem;
+    width: 150px; }
+    .footer__social-icons a {
+      filter: grayscale(1); }
+      .footer__social-icons a:hover {
+        filter: grayscale(0); }
+
+.kreotif {
+  color: #000;
+  display: flex;
+  flex-flow: column;
+  justify-content: flex-end;
+  margin-left: 3rem;
+  text-align: right;
+  font-size: 13px;
+  font-size: 1.3rem;
+  padding-bottom: 1.5rem; }
+  .kreotif a {
+    color: #307a56; }
 
 /* =about
 ---------------------------*/
@@ -336,7 +487,7 @@ footer {
 
 /* =/about
 ---------------------------*/
-.flexcenter, .sqicons__pic {
+.flexcenter, .footer__logo, .footer__social, .sqicons__pic {
   justify-content: center;
   align-items: center; }
 
@@ -386,23 +537,181 @@ footer {
 ---------------------------*/
 /* =rubrics
 ---------------------------*/
-.rubrics__tab {
+.rubrics__nav {
   font-size: 24px;
   font-size: 2.4rem;
   font-family: "SegoeUIBoldItalic";
   font-style: italic;
   color: #8c8c8c; }
-  .rubrics__tab li.separator {
+  .rubrics__nav li.separator {
     margin: 0 1.5rem; }
-  .rubrics__tab a {
+  .rubrics__nav a {
     color: #8c8c8c;
     text-decoration: none;
     border-bottom: 1px dashed rgba(48, 122, 86, 0); }
-    .rubrics__tab a.current {
+    .rubrics__nav a.current, .rubrics__nav a:hover {
       color: #307a56;
       border-bottom-color: #307a56; }
 
+.rubrics .tab {
+  display: none; }
+  .rubrics .tab-current {
+    display: block !important; }
+
+.rubrics__body {
+  margin-top: 2rem; }
+
+.rubrics #tab-news .flexbox {
+  justify-content: space-around;
+  margin-left: auto;
+  margin-right: auto;
+  width: 85%; }
+
+.rubrics__news-item {
+  padding: 1rem 1rem 2rem;
+  box-shadow: 0 0 5px #ccc;
+  width: 22rem; }
+
+.rubrics__news h3 {
+  font-size: 14px;
+  font-size: 1.4rem;
+  font-family: "SegoeUIBoldItalic";
+  height: 9.5rem;
+  padding-top: .8rem; }
+
 /* =/rubrics
+---------------------------*/
+/* =partners
+---------------------------*/
+.partners {
+  margin-bottom: 3rem; }
+  .partners__items {
+    margin: 2rem 0;
+    justify-content: space-around; }
+    .partners__items a {
+      display: block;
+      border: 1px solid rgba(48, 122, 86, 0);
+      padding: 1rem; }
+      .partners__items a:hover {
+        border-color: #307a56; }
+
+/* =/partners
+---------------------------*/
+#map {
+  height: 400px; }
+
+/* =feedback
+---------------------------*/
+.feedback {
+  margin-left: auto;
+  margin-right: auto;
+  width: 900px;
+  z-index: 999; }
+  .feedback .title {
+    color: #307a56; }
+  .feedback .vcard {
+    font-size: 15px;
+    font-size: 1.5rem;
+    margin-bottom: 1.4rem; }
+    .feedback .vcard .name {
+      display: none; }
+    .feedback .vcard .adr {
+      margin-bottom: 1.2rem; }
+    .feedback .vcard .tel {
+      text-decoration: none;
+      margin-right: .5rem; }
+    .feedback .vcard .email {
+      margin-left: .5rem;
+      color: #307a56; }
+  .feedback__content {
+    padding: .8rem 0 1rem; }
+  .feedback__form {
+    border: 1px solid #e9e9e9;
+    box-shadow: 0 0 3px #e9e9e9;
+    margin-left: auto;
+    margin-right: auto;
+    padding: .8rem .8rem 1.8rem;
+    position: relative;
+    width: 765px; }
+    .feedback__form .row {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -moz-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+      -webkit-justify-content: space-between;
+      -moz-justify-content: space-between;
+      justify-content: space-between;
+      margin-bottom: 1rem; }
+      .feedback__form .row input.form-control,
+      .feedback__form .row textarea {
+        border: 1px solid #ccc;
+        padding-left: 1.5rem;
+        padding-right: 1.5rem; }
+      .feedback__form .row input.form-control {
+        height: 3rem;
+        width: 245px; }
+        .feedback__form .row input.form-control::-webkit-input-placeholder {
+          color: #000; }
+        .feedback__form .row input.form-control::-moz-placeholder {
+          color: #000; }
+        .feedback__form .row input.form-control:-ms-input-placeholder {
+          color: #000; }
+        .feedback__form .row input.form-control:focus::-webkit-input-placeholder {
+          transition: line-height 0.5s ease; }
+        .feedback__form .row input.form-control:focus::-moz-placeholder {
+          transition: line-height 0.5s ease; }
+        .feedback__form .row input.form-control:focus:-ms-input-placeholder {
+          transition: line-height 0.5s ease; }
+      .feedback__form .row .form-control {
+        font-size: 14px;
+        font-size: 1.4rem; }
+      .feedback__form .row textarea {
+        flex: 1;
+        overflow: hidden;
+        height: 6.2rem; }
+        .feedback__form .row textarea::-webkit-input-placeholder {
+          color: #000; }
+        .feedback__form .row textarea::-moz-placeholder {
+          color: #000; }
+        .feedback__form .row textarea:-ms-input-placeholder {
+          color: #000; }
+        .feedback__form .row textarea:focus::-webkit-input-placeholder {
+          transition: line-height 0.5s ease; }
+        .feedback__form .row textarea:focus::-moz-placeholder {
+          transition: line-height 0.5s ease; }
+        .feedback__form .row textarea:focus:-ms-input-placeholder {
+          transition: line-height 0.5s ease; }
+      .feedback__form .row .error {
+        border: 1px solid red !important; }
+    .feedback__form .policy {
+      margin-top: 1.9rem; }
+    .feedback__form .submit {
+      background-image: -webkit-linear-gradient(top, #8bbaa3 0%, #317b57 100%);
+      background-image: -o-linear-gradient(top, #8bbaa3 0%, #317b57 100%);
+      background-image: linear-gradient(to bottom, #8bbaa3 0%, #317b57 100%);
+      background-repeat: repeat-x;
+      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FF8BBAA3', endColorstr='#FF317B57', GradientType=0);
+      background-color: #e6e6e6;
+      border: none;
+      color: #fff;
+      cursor: pointer;
+      height: 6.2rem;
+      margin-left: 1rem;
+      margin-top: .6rem;
+      padding: 0.8rem 2rem;
+      text-decoration: none; }
+      .feedback__form .submit:hover {
+        opacity: .9;
+        background-image: -webkit-linear-gradient(top, #317b57 0%, #8bbaa3 100%);
+        background-image: -o-linear-gradient(top, #317b57 0%, #8bbaa3 100%);
+        background-image: linear-gradient(to bottom, #317b57 0%, #8bbaa3 100%);
+        background-repeat: repeat-x;
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FF317B57', endColorstr='#FF8BBAA3', GradientType=0); }
+
+/* =/feedback
 ---------------------------*/
 /* =mobile-menu
 ---------------------------*/
