--- a/app/template/scss/_homepage.scss
+++ b/app/template/scss/_homepage.scss
@@ -1,8 +1,66 @@
+$h1 : 360px;
+
+.slider{
+	height: 600px;
+	position: relative;
+	margin-top: -110px;
+	margin-bottom: -$h1+20;
+	z-index: 9;
+	&__item{
+		text-align: center;
+		img{
+			margin-left: auto;
+			margin-right: auto;
+		}
+	}
+	&__text{
+		@extend .bold;
+		@include font-size(1.8);
+		background: rgba($color1, .65);
+		color: $color2;
+		left: 50%;
+		margin-left: -550px;
+		padding: .5rem 1rem;
+		position: absolute;
+		text-transform: uppercase;
+		top: 170px;
+	}
+	.bx-controls{
+		position: absolute;
+		top: 0;
+		width: 100%;
+		.bx-pager{
+			left: 59%;
+			top: 300px;
+			width: 150px;
+			text-align: left;
+		}
+	}
+	.bx-wrapper .bx-pager.bx-default-pager{
+		a{
+			border: 4px solid $color3;
+			background: $color2;
+			$size: 16px;
+			width: $size;
+			height: $size;
+			&.active{
+				background-color: $color3;
+				border-color: $color2;
+			}
+		}
+	}
+}
 /* =about
 ---------------------------*/
 .about{
+	height: $h1;
 	margin-bottom: 4rem;
+	position: relative;
 	width: 55rem;
+	z-index: 10;
+	.more{
+		text-align: right;
+	}
 }
 /* =/about
 ---------------------------*/
