--- a/app/template/css/styles.css
+++ b/app/template/css/styles.css
@@ -98,9 +98,6 @@ body {
 html, body {
   height: 100%; }
 
-*:focus {
-  outline: none; }
-
 input::-moz-focus-inner {
   border: 0;
   padding: 0; }
@@ -474,17 +471,20 @@ textarea {
         filter: grayscale(0); }
 
 .kreotif {
+  font-size: 13px;
+  font-size: 1.3rem;
   color: #000;
   display: flex;
   flex-flow: column;
   justify-content: flex-end;
   margin-left: 3rem;
-  text-align: right;
-  font-size: 13px;
-  font-size: 1.3rem;
-  padding-bottom: 1.5rem; }
+  padding-bottom: 1.5rem;
+  text-align: right; }
   .kreotif a {
     color: #307a56; }
+
+label.error {
+  display: none !important; }
 
 .flexcenter, .footer__logo, .footer__social, .sqicons__pic, .rubrics__article-title {
   justify-content: center;
@@ -867,6 +867,13 @@ textarea {
         background-image: linear-gradient(to bottom, #317b57 0%, #8bbaa3 100%);
         background-repeat: repeat-x;
         filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FF317B57', endColorstr='#FF8BBAA3', GradientType=0); }
+    .feedback__form .thank {
+      background: none;
+      border: none;
+      height: 142px;
+      margin-bottom: 1rem;
+      padding-top: 70px;
+      position: static; }
 
 /* =/feedback
 ---------------------------*/
