--- a/app/template/scss/_base.scss
+++ b/app/template/scss/_base.scss
@@ -53,9 +53,6 @@ html, body{
 }
 
 
-
-*:focus{outline:none}
-
 input::-moz-focus-inner{
 	border: 0;
 	padding: 0;
@@ -569,15 +566,15 @@ textarea{
 
 }
 .kreotif{
-	color: $color1;
 	@extend .cgi;
+	@include font-size(1.3);
+	color: $color1;
 	display: flex;
 	flex-flow: column;
 	justify-content: flex-end;
 	margin-left: 3rem;
-	text-align: right;
-	@include font-size(1.3);
 	padding-bottom: 1.5rem;
+	text-align: right;
 	a{
 		@extend .tdn;
 		color: $color3;
@@ -585,4 +582,6 @@ textarea{
 }
 
 
-
+label.error{
+	display: none !important;
+}
